# weave-agent-fleet

./: .gitignore  README.md  RELEASE.md  TIMESTAMPS_ANALYSIS.md  cli.js  eslint.config.mjs  next.config.ts  package-lock.json  package.json  tsconfig.json  vitest.config.ts
.github/codeql/: codeql-config.yml
.github/workflows/: ci.yml  codeql.yml  dev-channel.yml  release-desktop.yml  release.yml
.weave/: state.json
.weave/analytics/: fingerprint.json
.weave/docs/: file-api.md  file-inventory.md  findings.md  project-overview.md  v2-integration-test.md
.weave/findings/: plugin-system-exploration.md  provider-configuration.md  remote-fleet-client-server.md  session-switch-latency-analysis.md
.weave/future/: container-mvp.md  credential-store-and-workspace-provisioning.md  remote-fleet-architecture.md
.weave/learnings/: empty-assistant-part-normalization.md
.weave/plans/: agent-switching-ui.md  api-ui-split.md  bugfix-diffs-and-move.md  bulk-actions-and-context-menus.md  collapsible-sidebar.md  command-palette.md  context-dialog-redesign.md  credential-store.md  curl-installer-distribution.md  deterministic-callbacks.md  diff-mode-toggle.md  (+82 more)
scripts/: assemble-standalone.ps1  assemble-standalone.sh  install.ps1  install.sh  launcher.cmd  launcher.sh  tauri-prebuild.mjs
spike/: diagnose-server.ts  validate-critical-path.ts  validate-deadlock-fix.ts  validate-sdk.ts
src/: middleware.ts  test-setup.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
(+276 files in other folders)
